<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textSize="55sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:paddingTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_inicio"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombretxt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/UsuarioHint"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contraseñatxt"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/ConstraseñaHint"
            android:textStyle="italic"
            />


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/iniciarSesion_btn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="@color/gray"/>



</LinearLayout>