<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.alerta.AlertaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congestion_title"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:paddingTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congestion_location"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="46dp"/>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/borde"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/location_congestion_spinner"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congestion_type"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="46dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="46dp">

            <RadioGroup
                android:id="@+id/radio_type_congestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/checkbox_Accident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congestion_type_Accident"/>

            <RadioButton
                android:id="@+id/checkbox_Traffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congestion_type_Traffic"/>

            <RadioButton
                android:id="@+id/checkbox_Mecanic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congestion_type_Mecanic"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congestion_description"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="46dp"/>

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:inputType="textMultiLine"
            android:gravity="fill_horizontal"
            android:padding="6dp"
            android:hint="Describe Congestion"
            android:background="@drawable/borde2"/>

        <Button
            android:id="@+id/btn_enviar_congestion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/enviar_btn"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:enabled="true"/>

    </LinearLayout>

</ScrollView>