<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Congestion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congestion_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:paddingTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congestion_location"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="46dp"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/borde"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/location_congestion_spinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congestion_type"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="46dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="46dp">

        <CheckBox
            android:id="@+id/checkbox_Accident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congestion_type_Accident"/>

        <CheckBox
            android:id="@+id/checkbox_Traffic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congestion_type_Traffic"/>

        <CheckBox
            android:id="@+id/checkbox_Mecanic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congestion_type_Mecanic"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congestion_description"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="46dp"/>

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/borde2"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/enviar_btn"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:enabled="true"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelarEnvio_btn"
        android:backgroundTint="@color/bluegray_dark"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="50dp">

            <ImageButton
                android:id="@+id/mapaBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/mapa_btn_image"
                android:backgroundTint="@color/blue_select"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Map"
                android:textColor="@color/blue_select"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="50dp">

            <ImageButton
                android:id="@+id/alertaBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alerta_btn_image"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alert"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="50dp">

            <ImageButton
                android:id="@+id/reporteBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/reporte_btn_image"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Report"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/perfilBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/perfil_btn_image"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>