<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.reporte.ReporteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/origin_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_origin"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/txtOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Origin place"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/destination_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_destination"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/txtDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Destination place"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/vehicle_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_vehicle"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="N: Vehicle"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/driver_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_driver"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name Driver"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/weight_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_weight"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="# KG"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/material_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_material"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/borde"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/location_congestion_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/endate_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_end_date"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DD/MM/AAAA"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/endtime_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_end_time"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HH:MM:SS"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_btn"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:enabled="true"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelarEnvio_btn"
        android:backgroundTint="@color/bluegray_dark"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:enabled="false"/>



</LinearLayout>